# GPT-DecayRAG

./: .gitignore  CLAUDE.md  README.md  config.yaml  eval-plan.md  pytest.ini  requirements.txt
decayrag/: __init__.py  pyproject.toml
decayrag/decayrag/: __init__.py  ingest.py  pooling.py  pooling.py.py  post.py  retrieval.py
decayrag/decayrag.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
eval/: __init__.py  run_evaluation.py  test_components.py
eval/baselines/: __init__.py  bm25_retrieval.py  hybrid_retrieval.py  naive_retrieval.py  sentence_window.py
eval/dataset/: __init__.py  chunk_pair_finder.py  question_generator.py  wikipedia_loader.py
eval/metrics/: __init__.py  ranking.py  recall.py
eval/utils/: __init__.py  rate_limiter.py
examples/: generate_answer.py  quickstart.py
test_docs/: decay_kernels.txt  decayrag_overview.md
tests/: test_config.py  test_eval_async.py  test_ingest.py  test_ingest_extended.py  test_integration_openai.py  test_pooling.py  test_post.py  test_post_ordering.py  test_retrieval.py  test_retrieval_utils.py
